# libcozmo

./: .gitignore  .rosinstall  .travis.rosinstall  .travis.yml  CMakeLists.txt  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  dependencies.rosinstall  gmon.out  package.xml
devel/: _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
include/MDP/: MDP.hpp
include/action_space/: ActionSpace.hpp  cozmo_actions.hpp  generic_action_space.hpp
include/actionspace/: ActionSpace.hpp  GenericActionSpace.hpp  ObjectOrientedActionSpace.hpp  actionspace.hpp  object_oriented_action_space.hpp
include/cozmo/: .#cozmo.hpp  cozmo.hpp  cozmo.hpp~  viz.hpp
include/cozmo_description/: cozmo.hpp
include/distance/: SE2.hpp  distance.hpp  orientation.hpp  region.hpp  translation.hpp
include/model/: DeterministicModel.hpp  GPRModel.hpp  Model.hpp  ModelFramework.hpp  ScikitLearnFramework.hpp  WorldRepresentation.hpp
include/planner/: Dijkstra.hpp  Planner.hpp
include/statespace/: SE2.hpp  StateSpace.hpp  statehasher.hpp  statespace.hpp
include/utils/: utils.hpp
launch/: distributed_planner.launch
meshes/: forklift.STL  lower_forklift_strut.STL  upper_forklift_strut.STL
meshes/extra/: forklift_left.STL  forklift_right.STL  upper_forklift_strut_c_end.STL  upper_forklift_strut_f_end.STL
msg/: Action.msg  ActionMsg.msg  ForkLift.msg  OOAction.msg  ObjectOrientedAction.msg  ZPose.msg
nodes/: action_listener.cpp  action_test_node.py  cozmo_actions.py  cozmo_node.py  custom_object.py  edge_detection.py  execute_action_node.py  explore.py  path_finder.py  roscoz.py  visualize_edges.py
objects/: custom_object.py  run_cozmo.py  visualize_cozmo.py
robots/: cozmo.urdf
scenarios/: generate_scenarios.py  robot_1.yaml  robot_2.yaml  robot_3.yaml  robot_4.yaml  robot_5.yaml
scenarios/scenario_1/: robot_1.yaml  robot_10.yaml  robot_11.yaml  robot_12.yaml  robot_13.yaml  robot_14.yaml  robot_15.yaml  robot_16.yaml  robot_17.yaml  robot_18.yaml  robot_19.yaml  robot_2.yaml  robot_20.yaml  robot_21.yaml  robot_22.yaml  robot_23.yaml  robot_24.yaml  robot_25.yaml  robot_26.yaml  robot_27.yaml  robot_28.yaml  robot_29.yaml  robot_3.yaml  robot_30.yaml  robot_31.yaml  robot_32.yaml  robot_33.yaml  robot_34.yaml  robot_35.yaml  robot_36.yaml  robot_37.yaml  robot_38.yaml  robot_39.yaml  robot_4.yaml  robot_40.yaml  robot_41.yaml  robot_42.yaml  robot_43.yaml  robot_44.yaml  robot_45.yaml  (+20 more)
scenarios/scenario_10/: robot_1.yaml  robot_10.yaml  robot_11.yaml  robot_12.yaml  robot_13.yaml  robot_14.yaml  robot_15.yaml  robot_16.yaml  robot_17.yaml  robot_18.yaml  robot_19.yaml  robot_2.yaml  robot_20.yaml  robot_21.yaml  robot_22.yaml  robot_23.yaml  robot_24.yaml  robot_25.yaml  robot_26.yaml  robot_27.yaml  robot_28.yaml  robot_29.yaml  robot_3.yaml  robot_30.yaml  robot_31.yaml  robot_32.yaml  robot_33.yaml  robot_34.yaml  robot_35.yaml  robot_36.yaml  robot_37.yaml  robot_38.yaml  robot_39.yaml  robot_4.yaml  robot_40.yaml  robot_41.yaml  robot_42.yaml  robot_43.yaml  robot_44.yaml  robot_45.yaml  (+20 more)
scenarios/scenario_11/: robot_1.yaml  robot_10.yaml  robot_11.yaml  robot_12.yaml  robot_13.yaml  robot_14.yaml  robot_15.yaml  robot_16.yaml  robot_17.yaml  robot_18.yaml  robot_19.yaml  robot_2.yaml  robot_20.yaml  robot_21.yaml  robot_22.yaml  robot_23.yaml  robot_24.yaml  robot_25.yaml  robot_26.yaml  robot_27.yaml  robot_28.yaml  robot_29.yaml  robot_3.yaml  robot_30.yaml  robot_31.yaml  robot_32.yaml  robot_33.yaml  robot_34.yaml  robot_35.yaml  robot_36.yaml  robot_37.yaml  robot_38.yaml  robot_39.yaml  robot_4.yaml  robot_40.yaml  robot_41.yaml  robot_42.yaml  robot_43.yaml  robot_44.yaml  robot_45.yaml  (+20 more)
scenarios/scenario_12/: robot_1.yaml  robot_10.yaml  robot_11.yaml  robot_12.yaml  robot_13.yaml  robot_14.yaml  robot_15.yaml  robot_16.yaml  robot_17.yaml  robot_18.yaml  robot_19.yaml  robot_2.yaml  robot_20.yaml  robot_21.yaml  robot_22.yaml  robot_23.yaml  robot_24.yaml  robot_25.yaml  robot_26.yaml  robot_27.yaml  robot_28.yaml  robot_29.yaml  robot_3.yaml  robot_30.yaml  robot_31.yaml  robot_32.yaml  robot_33.yaml  robot_34.yaml  robot_35.yaml  robot_36.yaml  robot_37.yaml  robot_38.yaml  robot_39.yaml  robot_4.yaml  robot_40.yaml  robot_41.yaml  robot_42.yaml  robot_43.yaml  robot_44.yaml  robot_45.yaml  (+20 more)
scenarios/scenario_13/: robot_1.yaml  robot_10.yaml  robot_11.yaml  robot_12.yaml  robot_13.yaml  robot_14.yaml  robot_15.yaml  robot_16.yaml  robot_17.yaml  robot_18.yaml  robot_19.yaml  robot_2.yaml  robot_20.yaml  robot_21.yaml  robot_22.yaml  robot_23.yaml  robot_24.yaml  robot_25.yaml  robot_26.yaml  robot_27.yaml  robot_28.yaml  robot_29.yaml  robot_3.yaml  robot_30.yaml  robot_31.yaml  robot_32.yaml  robot_33.yaml  robot_34.yaml  robot_35.yaml  robot_36.yaml  robot_37.yaml  robot_38.yaml  robot_39.yaml  robot_4.yaml  robot_40.yaml  robot_41.yaml  robot_42.yaml  robot_43.yaml  robot_44.yaml  robot_45.yaml  (+20 more)
scenarios/scenario_14/: robot_1.yaml  robot_10.yaml  robot_11.yaml  robot_12.yaml  robot_13.yaml  robot_14.yaml  robot_15.yaml  robot_16.yaml  robot_17.yaml  robot_18.yaml  robot_19.yaml  robot_2.yaml  robot_20.yaml  robot_21.yaml  robot_22.yaml  robot_23.yaml  robot_24.yaml  robot_25.yaml  robot_26.yaml  robot_27.yaml  robot_28.yaml  robot_29.yaml  robot_3.yaml  robot_30.yaml  robot_31.yaml  robot_32.yaml  robot_33.yaml  robot_34.yaml  robot_35.yaml  robot_36.yaml  robot_37.yaml  robot_38.yaml  robot_39.yaml  robot_4.yaml  robot_40.yaml  robot_41.yaml  robot_42.yaml  robot_43.yaml  robot_44.yaml  robot_45.yaml  (+20 more)
scenarios/scenario_15/: robot_1.yaml  robot_10.yaml  robot_11.yaml  robot_12.yaml  robot_13.yaml  robot_14.yaml  robot_15.yaml  (+53 more)
src/: console.py  cozmo.cpp  cozmo.hpp  createCozmo.cpp  dart_example.cpp  execute_traj.cpp  go_to_pose_example.cpp  rviz_example.cpp  sim_example.cpp  viz.cpp  waypoint_generator.py
src/cozmopy/: CMakeLists.txt  State.cpp  State.h  cozmopy.cpp  graph.cpp  graph.h  setup.py
src/cozmopy/src/cozmopy/: cozmo_py.cpp  cozmopy.cpp
src/cozmopy/src/cozmopy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
srv/: Done.srv  GetTrajectory.srv
(+553 files in other folders)
