<?xml version="1.0"?>
<package format="2">
    <name>libcozmo</name>
    <version>0.0.1</version>
    <description>
        C++ library for simulating and running Cozmo based on DART and AIKIDO.
    </description>
    <maintainer email="vrangane@andrew.cmu.edu">Vinitha Ranganeni</maintainer>
    <author email="vrangane@andrew.cmu.edu">Vinitha Ranganeni</author>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>aikido</depend>
    <depend>dartsim</depend>
    
    <build_depend>pybind11_catkin</build_depend>
    <exec_depend>pybind11_catkin</exec_depend>

</package>
