<?xml version="1.0"?>
<package format="2">
    <name>libcozmo</name>
    <version>0.0.2</version>
    <description>
        C++ library for simulating and running Cozmo based on DART and AIKIDO.
    </description>
    <maintainer email="vinitha@cs.uw.edu">Vinitha Ranganeni</maintainer>
    <author email="vinitha@cs.uw.edu">Vinitha Ranganeni</author>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>aikido</depend>
    <depend>dartsim</depend>
    <depend>eigen</depend>
    <depend>roscpp_initializer</depend>
    <depend>aikidopy</depend>

    <build_depend>pybind11_catkin</build_depend>
    <exec_depend>pybind11_catkin</exec_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>std_msgs</exec_depend>

    <test_depend>rosunit</test_depend>
</package>
